--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>SO Por DEUs hj</title>
 </head>
 <body>
-    Hoje o dia ta foda, povo maconhado e eu sobrio. 
+    Dados: Ana julia de souza; Heric Damata santos
+    tino
 </body>
 </html>
