--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-    <title>SO Por DEUs hj</title>
+    <title> Damata shop </title>
 </head>
 <body>
-    Dados: Ana julia de souza; Heric Damata santos
-    tino
+    50 dolares um fone. Retirada na loja, frete de RS 3,00
 </body>
 </html>
