--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Damata shop </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    50 dolares um fone. Retirada na loja, frete de RS 3,00
+    <h1> Damata Shops</h1>
+    <ul>
+        <li>login</li>
+        <li>carrinho</li>
+        <li></li>
+    </ul>
 </body>
 </html>
