--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Damata Shops</h1>
+    <h1> <img class="imagem-logo" src="logo_damata.png" alt="ERRO"></h1>
     <ul>
         <li>login</li>
         <li>carrinho</li>
