--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Damata shop </title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1> <img class="imagem-logo" src="logo_damata.png" alt="ERRO"></h1>
+</head> 
+<body> 
+   <header class="inicio-pagina"> 
+    <img class="imagem-logo" src="logo_damata.png" alt="logo da pagina">
     <ul>
-        <li>login</li>
-        <li>carrinho</li>
-        <li></li>
+        <li  class="itens-lateral">login</li>
+        <li  class="itens-lateral">carrinho</li>
+        <li class="buscar"> buscar </li>
     </ul>
+</header>
 </body>
 </html>
