--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head> 
 <body> 
    <header class="inicio-pagina"> 
-    <img class="imagem-logo" src="logo_damata.png" alt="logo da pagina">
+    <img class="imagem-logo" src="DAMATA.png" alt="error">
     <ul>
         <li  class="itens-lateral">login</li>
         <li  class="itens-lateral">carrinho</li>
