teste de fontes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
    <header class="inicio-pagina"> 
     <img class="imagem-logo" src="DAMATA.png" alt="error">
     <ul>
-        <li  class="itens-lateral">login</li>
-        <li  class="itens-lateral">carrinho</li>
-        <li class="buscar"> buscar </li>
+        <li  class="itens-lateral">Login</li>
+        <li  class="itens-lateral">Sobre nós</li>
+        <li class="buscar"> Busca</li>
     </ul>
 </header>
+<section class="textos">
+    <h2 class="titulo1">O que é isso ?</h2>
+    <p> Nao sei o que to fazendo da vida mais, Roberto ta triste</p>
+    <p> Tudo que é bom acaba</p>
+    <h2>hrujklçbnb</h2>
+</section>
+<h2>ryejjjgg</h2>
 </body>
 </html>
