terminando as fontes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Damata shop </title>
     <link rel="stylesheet" href="style.css">
 </head> 
-<body> 
+<body class="pagina"> 
    <header class="inicio-pagina"> 
     <img class="imagem-logo" src="DAMATA.png" alt="error">
     <ul>
@@ -17,10 +17,9 @@
     </ul>
 </header>
 <section class="textos">
-    <h2 class="titulo1">O que é isso ?</h2>
+    <h2 class="titulo1">Sobre nos</h2>
     <p> Nao sei o que to fazendo da vida mais, Roberto ta triste</p>
     <p> Tudo que é bom acaba</p>
-    <h2>hrujklçbnb</h2>
 </section>
 <h2>ryejjjgg</h2>
 </body>
