--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Damata shop </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head> 
 <body class="pagina"> 
    <header class="inicio-pagina"> 
@@ -17,10 +20,25 @@
     </ul>
 </header>
 <section class="textos">
-    <h2 class="titulo1">Sobre nos</h2>
-    <p> Nao sei o que to fazendo da vida mais, Roberto ta triste</p>
-    <p> Tudo que é bom acaba</p>
-</section>
-<h2>ryejjjgg</h2>
+     <div class="paragrafos">
+        <h2 class="titulo1">Sobre nos</h2>
+        <p> Empresa do ramo tecnologico voltado para novos jovens no mercado de trabalho. Fundada no ano de 2018, por um tecnico da area.</p>
+        <p> Auxiliamos jovens programadores em encontrar seu primeiro emprego na area, fazendo todo o cambio entre empresa e programador</p>
+     </div>
+<img class="Imagem" src="Imagem-1.png" alt="Imagem ilustrativa">
+    </section>
+    <section class="Empresas">
+        <h2 class="titulo2"> Trabalhamos com a seguintes linguagens</h2>
+        <div class="linguas-div">
+            <img class="logo" src="html.png" alt="logo html">
+            <h3>Html</h3>
+            <img class="logo" src="social.png" alt="logo css">
+            <h3>Css</h3>
+            <img class="logo" src="python.png" alt="logo python">
+            <h3>Python</h3>
+            <img class="logo" src="java-script.png" alt="logo java-script">
+            <h3>Java-script</h3>
+        </div>
+    </section>
 </body>
 </html>
