--- a/index.html
+++ b/index.html
@@ -29,16 +29,29 @@
     </section>
     <section class="Empresas">
         <h2 class="titulo2"> Trabalhamos com a seguintes linguagens</h2>
+       <div class="lingua-1">
         <div class="linguas-div">
+          <div class="ti"> 
             <img class="logo" src="html.png" alt="logo html">
-            <h3>Html</h3>
+            <h3>Html</h3> 
+        </div>  
+        <div class="ti">
             <img class="logo" src="social.png" alt="logo css">
             <h3>Css</h3>
-            <img class="logo" src="python.png" alt="logo python">
+        </div>
+            <div class="ti">
+                <img class="logo" src="python.png" alt="logo python">
             <h3>Python</h3>
+            </div>
+           <div class="ti">
             <img class="logo" src="java-script.png" alt="logo java-script">
             <h3>Java-script</h3>
+           </div>
         </div>
+    </div>
     </section>
+    <footer class="rodape">
+        <h3>Por hoje é isso pessoal</h3>
+    </footer>
 </body>
 </html>
