--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
         <h2 class="titulo2"> Trabalhamos com a seguintes linguagens</h2>
        <div class="lingua-1">
         <div class="linguas-div">
-          <div class="ti"> 
-            <img class="logo" src="html.png" alt="logo html">
+          <div class="ti3"> 
+            <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML"><img class="logo" src="html.png" alt="logo html"></a>
             <h3>Html</h3> 
         </div>  
         <div class="ti">
-            <img class="logo" src="social.png" alt="logo css">
+            <a href="https://www.hostinger.com.br/tutoriais/o-que-e-css-guia-basico-de-css"><img class="logo" src="social.png" alt="logo css"></a>
             <h3>Css</h3>
         </div>
             <div class="ti">
-                <img class="logo" src="python.png" alt="logo python">
+                <a href="https://www.alura.com.br/artigos/python"><img class="logo" src="python.png" alt="logo python"></a>
             <h3>Python</h3>
             </div>
            <div class="ti">
-            <img class="logo" src="java-script.png" alt="logo java-script">
+           <a href="https://www.hostinger.com.br/tutoriais/o-que-e-javascript"> <img class="logo" src="java-script.png" alt="logo java-script"></a>
             <h3>Java-script</h3>
            </div>
         </div>
